fixing carousel item's height, so that it's not clipped

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -283,7 +283,7 @@
 			.carousel-inner .item {
 				// replace carousel with scroll-down layout
 				display: block;
-				height: 62vh;
+				height: 63vh;
 
 				.slide-header {
 					.slide-title {
